+ some other modules + working Android setup

--- a/src/pupspec.yaml
+++ b/src/pupspec.yaml
@@ -1,3 +1,4 @@
+name: 'erpiv'
 dependencies:
-  awesome:
-    git: git://github.com/munificent/awesome.git
+  google-api-dart-client:
+    git: https://code.google.com/p/google-api-dart-client
